# MyGeodeMod

./: .gitignore  CMakeLists.txt  main.cpp  mod.json
.github/workflows/: build.yml
src/: AutoBuildPopup.cpp  AutoBuildPopup.hpp  DecorationManager.cpp  DecorationManager.hpp  main.cpp
